# snowbird

./: .gitignore  COMMANDS.md  Makefile  README.md  README.rst  REFERENCES.md  generate_doc.py  main.py  permifrost.yml  pyproject.toml  release.sh  script.json  setup.py  setup_env.sh  skills-lock.json  snowflake.schema.json
.agents/skills/snowbird-cli/: SKILL.md
.github/: copilot-instructions.md  publish-to-test-pypi.yml
.github/agents/: snowflake-grants-reviewer.agent.md
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml  test.yaml
snowbird/: __init__.py  __main__.py  app.py  cli.py  command.py  create_dev_db.py  dataproducts.py  loader.py  main.py  models.py  plan.py  resources.py  state.py  utils.py
tests/: permifrost.yml  snowflake.yml  temp_read_only.py  test_cli.py  test_execution_plan.py  test_extra_role_grants.py  test_loader.py  test_no_writes.py  test_plan.py  test_plan_overview.py  test_roles.py  test_state.py  test_version.py
tests/end_to_end/: test_case_insensitive_spec.yml  test_case_insensitive_state.json  test_spec.py
tests/infrastructure/: auth.sh  read_only_role.yml  snowflake.yml  snowflake_no_write.yml
