[tool.poetry]
name = "snowbird"
version = "0.0.6"
description = "Snowbird helps configure Snowflake resources for dataproducts."
readme = "README.md"
authors = ["pbencze <paul@idelab.com>"]

[tool.poetry.dependencies]
python = "^3.8"
permifrost = "^0.15.4"
pydantic = "^2.3.0"
PyYAML = "^6.0"
click = "^8.1.7"
snowflake-sqlalchemy = "^1.5.1"

[tool.poetry.group.dev.dependencies]
twine = "^4.0.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
mock = "^4.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
snowbird = 'snowbird.command:cli'
